log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes: # Define volume
        - name: shared
          persistentVolumeClaim:
            claimName: file-share
      containers:
        - name: log-output-generate
          image: dubeaka/log-output-generate:1.0
          volumeMounts: # Mount volume
            - name: shared
              mountPath: /usr/src/app/file
        - name: log-output-show
          image: dubeaka/log-output-show:2.0
          volumeMounts: # Mount volume
            - name: shared
              mountPath: /usr/src/app/file
